<resources>
    <string name="app_name">Dictionary</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="arabic">Arabic:</string>
    <string name="english">English:</string>
    <string name="french">French:</string>
    <string name="persian">Persian:</string>
    <string name="btnadd">Add</string>
    <string name="btnedit">Edit</string>
    <string name="name">Name</string>

    <string name="to_arabic">Arabic</string>
    <string name="to_english">English</string>
    <string name="to_french">French</string>
    <string name="to_persian">Persian</string>

    <string name="add_toast">The word added to dictionary.</string>
    <string name="edit_toast">The word is edited successfully.</string>
</resources>
